# libroadrunner-deps

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml  roadrunner_deps_build.py
install-MSVC2019/Release/lib/: gtest_main.lib  libf2c.lib  nleq1-static.lib  rr-libstruct-static.lib
install-MSVC2019/Release/lib/cmake/: PocoFoundation-config.cmake  PocoNet-config.cmake  bzip2.cmake  iconv-config.cmake  libsbml-config.cmake  libxml2-config.cmake  libxml2-export.cmake  nleq1-config-release.cmake  nleq1-config.cmake  sundials-config-release.cmake  zlib-config-release.cmake
packaging/: CMakeLists.txt
packaging/deb/debian/: shlibs.local.ex
packaging/deb/libroadrunner-deps/debian/: changelog  rules  shlibs.local.ex
